[package]
name = "elden-cockring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#buttplug = "5.1.7"
buttplug = { path = "../buttplug-rs/buttplug" }
futures = "0.3.21"
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "io-std", "process"] }
